fixing error default package

--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,12 @@
-.gradle
-
-bin
-
-Reports
-
-Libs
-
-output
-
-!output/.gitkeep
-build
-
 .classpath
-
+.settings
+settings
 .project
+.cache
+*.gradle
+*.log
+console.properties
+bin
+Reports
+Libs
+.DS_Store
